# spotify_idle

./: README.rst  pyproject.toml  requirements.txt  tox.ini
datas/フィロソフィーのダンス/Funky but Chic(with Bonus Track)/: VIVA 運命(ボーカル・オフ・バージョン).json  VIVA 運命.json  いつか大人になって.json  アイドル・フィロソフィー.json  アイムアフタータイム.json  オール・ウィ・ニード・イズ・ラブストーリー.json  コモンセンスバスターズ(ボーカル・オフ・バージョン).json  コモンセンスバスターズ.json  バイバイよりも.json  告白はサマー.json  好感度あげたい!.json
datas/フィロソフィーのダンス/Live at Harajuku Astro Hall, Do the Strand Vol.1/: DTF! (ライブ).json  VIVA 運命 (ライブ).json  あなたにあげない (ライブ).json  いつか大人になって (ライブ).json  すききらいアンチノミー (ライブ).json  アイムアフタータイム (ライブ).json  オール・ウィ・ニード・イズ・ラブストーリー (ライブ).json  コモンセンスバスターズ (ライブ).json  ソバージュ・イマージュ (ライブ).json  バイバイよりも (ライブ).json  パラドックスがたりない (ライブ).json  プラトニック・パーティー (ライブ).json  告白はサマー (ライブ).json  好きだから好き (ライブ).json  好感度あげたい! (ライブ).json  熱帯夜のように (ライブ).json
datas/フィロソフィーのダンス/Live at Shinjuku BLAZE, Do the Strand Vol.3/: DTF! (フィーチャリング Li-sa-X、ライブ・アット・ブレイズ).json  VIVA 運命 (ライブ・アット・ブレイズ).json  はじめまして未来 (ライブ・アット・ブレイズ).json  アイドル・フィロソフィー (ライブ・アット・ブレイズ).json  アルゴリズムの海 (ライブ・アット・ブレイズ).json  コモンセンスバスターズ (ライブ・アット・ブレイズ).json  ジャスト・メモリーズ (ライブ・アット・ブレイズ).json  ベスト・フォー (ライブ・アット・ブレイズ).json  ライク・ア・ゾンビ (ライブ・アット・ブレイズ).json  好感度あげたい! (ライブ・アット・ブレイズ).json
datas/フィロソフィーのダンス/SAPIOSEXUAL/: アイム・アフター・タイム - Remixed by パソコン音楽クラブ.json  アルゴリズムの海 - ヤマモトショウ リミックス Human Mix Version.json  スーパーヴィーニエンス - Night Tempo Shuto Expressway Groove mix.json  ダンス・ファウンダー - FPM Never Ever Mix.json  (+1 more)
spotify_idle/: .env_sample  collect_music_info.py  settings.py
spotify_idle/utils/: connect.py
tests/: test_spotify_idle.py
(+88 files in other folders)
